# BrokenHill

./: LICENSE  Observations.md  README.md  attack-llm-01.py  brokenhill.py  gcg-attack.py  keeping_the_initial_prompt_simple-part_1.md  ollama_wrapper.sh  pyproject-01.toml  pyproject.toml  requirements.txt  setup.py  version_history.md
curated_results/gemma/: README.md
curated_results/gpt_neo/: README.md
curated_results/guanaco/: README.md
curated_results/opt/: README.md
curated_results/phi2/: README.md
curated_results/phi3/: README.md
curated_results/stablelm/: README.md
curated_results/stablelm2/: README.md
data/: llama3_system_prompt.txt
docs/: FAQ.md  One_Prompt_To_Rule_Them_All-Derek_CTF.md  One_Prompt_To_Rule_Them_All.md  README.md  all_command-line_options.md  competing_visions_of_the_future.md  extracting_result_information.md  fschat.md  gcg_attack.md  jailbreaking_test_cases.md  keeping_the_initial_prompt_simple-part_1.md  memory_requirements.md  model_notes.md  observations.md  other_graphics_hardware.md  parameter_guidelines_based_on_model_size.md  re-encoding.md  selecting_a_model_data_type.md  slippery_models.md  temperature.md  thoughts_on_universal_and_transferrable_claims.md  troubleshooting.md
docs/GCG_attack/: One_Prompt_To_Rule_Them_All-Derek_CTF.md  One_Prompt_To_Rule_Them_All.md  gcg_attack.md  model_notes.md  slippery_models.md  testing_remote_llms.md
docs/curated_results/gemma2/: annihilation_of_the_human_race.md
docs/curated_results/phi2/: early_results.md
docs/examples/: annihilation-phi2.md  controlled_substances-qwen1.5.md  death_threat-phi3-canonical_llm_jailbroken.json  death_threat-phi3.md
llm_attacks/: __init__.py
llm_attacks/base/: attack_manager.py
llm_attacks/minimal_gcg/: opt_utils.py  string_utils.py
llm_attacks_bishopfox/: __init__.py  json_serializable_object.py  logging.py
llm_attacks_bishopfox/attack/: attack_classes.py  radiation_garden.py
llm_attacks_bishopfox/base/: attack_manager.py
llm_attacks_bishopfox/dumpster_fires/: conversation_templates.py  offensive_tokens.py  trash_fire_tokens.py
llm_attacks_bishopfox/gcg/: __init__.py  gcg_attack.py
llm_attacks_bishopfox/jailbreak_detection/: jailbreak_detection.py
llm_attacks_bishopfox/llms/: large_language_models.py  model_list.json
llm_attacks_bishopfox/minimal_gcg/: adversarial_content_utils.py  opt_utils.py  string_utils.py
llm_attacks_bishopfox/statistics/: statistical_tools.py
llm_attacks_bishopfox/teratogenic_tokens/: human_language_names-01.json  human_language_names.json  language_names.py
llm_attacks_bishopfox/tests/: test_classes.py
llm_attacks_bishopfox/util/: util_functions.py
tests/: model_list.json  smoke_test-all_models.py  test_models.py
(+3 files in other folders)
